demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  # note that you will need to add an etc/hosts entry
  # $INGRESS_IP    my-ingress.info
  # or no incoming requests will be matched
  - host: my-ingress.info
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
status:
  loadBalancer: {}
